fixed file button: text size of input was too big

--- a/src/components/common/Button.module.css
+++ b/src/components/common/Button.module.css
@@ -1,4 +1,5 @@
 .button {
+    display: inline-block;
     position: relative;
     padding: 8px 16px;
     margin: 0;
@@ -15,15 +16,13 @@
     right: 0;
     bottom: 0;
     left: 0;
-    min-width: 100%;
-    min-height: 100%;
-    font-size: 100px;
+    font-size: 1px;
     text-align: right;
     filter: alpha(opacity=0);
     opacity: 0;
     outline: none;
     background: white;
-    cursor: inherit;
+    cursor: pointer;
     display: block;
 }
 
